src/test/deca/context/invalid/provided/testi08.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : returntype of the child is not a subtype of the parent's
class X{
    boolean is_int(){}
}
class Y extends X{
    int is_int(){}
}